--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://unluckysparow.github.io/portofolio-sparow/",
+  "homepage":"https://unluckysparow.github.io/portfolio-sparow",
   "name": "portofolio",
   "version": "0.1.0",
   "private": true,
