--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://unluckysparow.github.io/portfolio-sparow",
+  "homepage": "https://unluckysparow.github.io/portfolio-sparow",
   "name": "portofolio",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0-alpha1",
     "gh-pages": "^5.0.0",
+    "graphql": "^16.6.0",
     "graphql-react": "^20.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,8 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
